# local-voice-ai-agent

./: .gitignore  CLAUDE.md  SPOT.md  assistant_config.yml  local_voice_chat_advanced.py  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh  session-stop.sh
commands/: __init__.py  db_commands.py  export_commands.py  fs_commands.py
prompts/: agent_command_prompt.xml  concise_response_prompt.xml  refinement_prompt.xml  source_relevance_prompt.xml  source_summary_prompt.xml  system_prompt.xml
scripts/: install_chatterbox.bat  install_chatterbox.py  setup_chatterbox_envs.bat
tests/: test_builtin_discovery.py  test_command_parser.py  test_config.py  test_context.py  test_db_commands.py  test_execute.py  test_export_commands.py  test_fs_commands.py  test_history.py  test_llm.py  test_modes.py  test_prompt_loader.py  test_refinement.py  test_scratchpad.py  test_source_analysis.py  test_tts.py  test_typer_discovery.py
voice_agent/: __init__.py  command_parser.py  config.py  context.py  execute.py  history.py  llm.py  modes.py  prompt_loader.py  refinement.py  scratchpad.py  source_analysis.py  tts.py  typer_discovery.py
